// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GridSection /> > Snapshot of page 1`] = `
<div
  class="sc-hoLldG goHkam"
  data-testid="section-background"
>
  <div
    class="sc-jZhnRx kehEgr"
    data-testid="section-container"
  >
    <div
      class="sc-fmZSGO bcrWjV"
    >
      <h2
        class="sc-bXdtCk ksXdHw"
        data-testid="heading"
      >
        <span>
          <b
            style="font-size: 2rem;"
          >
            Serviço
          </b>
        </span>
      </h2>
      <div
        class="sc-hKDTPf jWXUGw"
        data-testid="text-component"
      >
        Conheça as atividades podem ser feitas para melhorar o seu negócio.
      </div>
      <div
        class="sc-gwsNht cbnKgd"
      >
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Web
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Sites e aplicações web personalizadas com as melhores tecnologias do mercado, garantindo performance e segurança para seu negócio.
          </div>
        </div>
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Análise
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Análise especializada para identificar as melhores soluções tecnológicas para suas necessidades específicas.
          </div>
        </div>
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Otimiza
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Melhoramos a performance e experiência do usuário em suas plataformas existentes.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridSection /> > should match snapshot for mobile 1`] = `
<div
  class="sc-hoLldG goHkam"
  data-testid="section-background"
>
  <div
    class="sc-jZhnRx kehEgr"
    data-testid="section-container"
  >
    <div
      class="sc-fmZSGO bcrWjV"
    >
      <h2
        class="sc-bXdtCk ksXdHw"
        data-testid="heading"
      >
        <span>
          <b
            style="font-size: 2rem;"
          >
            Serviço
          </b>
        </span>
      </h2>
      <div
        class="sc-hKDTPf jWXUGw"
        data-testid="text-component"
      >
        Conheça as atividades podem ser feitas para melhorar o seu negócio.
      </div>
      <div
        class="sc-gwsNht cbnKgd"
      >
        <div
          class="sc-hBDmJg kmiTyb"
        >
          <h3>
            <b
              style="font-size: 1.2rem;"
            >
              Web
            </b>
          </h3>
          <p>
            Sites e aplicações web personalizadas com as melhores tecnologias do mercado, garantindo performance e segurança para seu negócio.
          </p>
        </div>
        <div
          class="sc-hBDmJg kmiTyb"
        >
          <h3>
            <b
              style="font-size: 1.2rem;"
            >
              Análise
            </b>
          </h3>
          <p>
            Análise especializada para identificar as melhores soluções tecnológicas para suas necessidades específicas.
          </p>
        </div>
        <div
          class="sc-hBDmJg kmiTyb"
        >
          <h3>
            <b
              style="font-size: 1.2rem;"
            >
              Otimiza
            </b>
          </h3>
          <p>
            Melhoramos a performance e experiência do usuário em suas plataformas existentes.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridSection /> > should match snapshot with background for desktop 1`] = `
<div
  class="sc-hoLldG kOIwJj"
  data-testid="section-background"
>
  <div
    class="sc-jZhnRx kehEgr"
    data-testid="section-container"
  >
    <div
      class="sc-fmZSGO bcrWjV"
    >
      <h2
        class="sc-bXdtCk ksXdHw"
        data-testid="heading"
      >
        <span>
          <b
            style="font-size: 2rem;"
          >
            Serviço
          </b>
        </span>
      </h2>
      <div
        class="sc-hKDTPf jWXUGw"
        data-testid="text-component"
      >
        Conheça as atividades podem ser feitas para melhorar o seu negócio.
      </div>
      <div
        class="sc-gwsNht cbnKgd"
      >
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Web
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Sites e aplicações web personalizadas com as melhores tecnologias do mercado, garantindo performance e segurança para seu negócio.
          </div>
        </div>
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Análise
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Análise especializada para identificar as melhores soluções tecnológicas para suas necessidades específicas.
          </div>
        </div>
        <div
          class="sc-dYOLZc gyUkna"
        >
          <h3
            class="sc-jMpmlX bCuHwk"
          >
            <b
              style="font-size: 1.2rem;"
            >
              Otimiza
            </b>
          </h3>
          <div
            class="sc-hKDTPf jWXUGw"
            data-testid="text-component"
          >
            Melhoramos a performance e experiência do usuário em suas plataformas existentes.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
